<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Andy Botting <andy@andybotting.com>  
    
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
     
    This file is distributed in the hope that it will be useful, but  
    WITHOUT ANY WARRANTY; without even the implied warranty of  
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU  
    General Public License for more details.  
     
    You should have received a copy of the GNU General Public License  
    along with this program.  If not, see <http://www.gnu.org/licenses/>.  
    
    This file incorporates work covered by the following copyright and  
    permission notice:

    Copyright 2010 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">Oyster Mate</string>
    <string name="about_msg">An Android client for viewing and mangaing your OysterCard.\n\nhttps://github.com/andybotting/oystermate\n\nLatest changes in v0.4\n - Fix account issues\n - Show the last viewed card, if you have multiple cards on your account\n - Allow app to be moved to SD Card/External storage\n\nLatest changes in v0.2\n - Support multiple Oyster Cards on an account\n\nLatest changes in v0.1\n - Initial release.\n - Show balance, auto top-up and any season tickets\n - Manage season tickets and top-up via TfL site through app.\n\nPlease file bug reports and feature requests at the OysterMate project GitHub site at:\nhttps://github.com/andybotting/oystermate/issues\n\nThis application is provided with no warranty and is open source, licensed under the GPLv3.\n</string>
    
	<!-- OysterDetails -->
	<string name="signing_in">Signing in…</string>
	<string name="fetching_account_data">Fetching Oyster Account details…</string>
	<string name="fetching_card_data">Fetching OysterCard details…</string>
	<string name="menu_info">About</string>
	<string name="menu_logout">Log out</string>
	<string name="menu_refresh">Refresh</string>
	<string name="manage_autotopup">Manage Auto Top-Up</string>
	<string name="add_topup">Top-up OysterCard</string>
	<string name="label_loading">Loading…</string>
	<string name="label_select_card">Oyster Card:</string>	
	<string name="prompt_select_card">Select Oyster Card…</string>	
			
	<!-- Login -->
	<string name="login_info">Please sign in with your TfL Oyster Card login details.\nIf you don\'t already have an account, click \'Sign Up\' to create one with your Oyster Card ID number.</string>
	<string name="email">Email address:</string>
	<string name="password">Password:</string>
	<string name="button_sign_in">Sign In</string>
	<string name="button_sign_up">Sign Up</string>
	<string name="button_forgot_username">Forgot username?</string>
	<string name="button_forgot_password">Forgot password?</string>

    <!-- Menu item labels -->
    <string name="menu_item_about">About</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_signout">Sign Out</string>
	
</resources>
