<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip" >

    <ImageView
        android:id="@+id/image_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/title_large" />

    <TextView
        android:id="@+id/label_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_title"
        android:layout_marginTop="10dip"
        android:text="@string/email"
        android:textColor="#444444" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_username"
        android:minHeight="40dip"
        android:singleLine="true" />

    <TextView
        android:id="@+id/label_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="10dip"
        android:text="@string/password"
        android:textColor="#444444" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_password"
        android:layout_marginBottom="10dip"
        android:minHeight="40dip"
        android:password="true"
        android:singleLine="true" />

    <Button
        android:id="@+id/button_sign_in"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:text="@string/button_sign_in" />

    <Button
        android:id="@+id/button_sign_up"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_toRightOf="@id/button_sign_in"
        android:text="@string/button_sign_up" />

    <Button
        android:id="@+id/button_forgot_username"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_sign_in"
        android:text="@string/button_forgot_username" />

    <Button
        android:id="@+id/button_forgot_password"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/info_text"
        android:layout_toRightOf="@+id/button_forgot_username"
        android:text="@string/button_forgot_password" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_forgot_username"
        android:text="@string/login_info"
        android:textColor="#444444" />

</RelativeLayout>